[tool.poetry]
name = "unova-board-generator"
version = "0.0.1"
description = ""
authors = ["Guy Wolf <guywolf2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ffmpeg-python = "^0.2.0"
fastapi = {extras = ["all"], version = "^0.109.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
